load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_load", "oci_push")
load("@rules_pkg//pkg:mappings.bzl", "pkg_files", "strip_prefix")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
load("@rules_scala//scala:scala.bzl", "scala_binary", "scala_junit_test", "scala_library")
load("//tools/buildinfo:defs.bzl", "buildinfo")
load("//tools/oci:defs.bzl", "OTEL_DISABLE_ENV", "oci_stamped_labels", "runtime_jars")

# Generates the dsp-ingest buildinfo source (package swiss.dasch.version).
# knoraSipiVersion is read at RUNTIME (CommandExecutorLive shells out to
# `daschswiss/knora-sipi:${knoraSipiVersion}`), so it must equal the git version.
# gitCommit is the full HEAD -> STABLE_GIT_COMMIT.
buildinfo(
    name = "buildinfo_gen",
    out = "BuildInfo.scala",
    package_name = "swiss.dasch.version",
    stamp_fields = {
        "version": "STABLE_GIT_VERSION",
        "knoraSipiVersion": "STABLE_GIT_VERSION",
        "gitCommit": "STABLE_GIT_COMMIT",
        "buildTime": "STABLE_BUILD_TIME",
    },
    string_fields = {
        "name": "dsp-ingest",
        "scalaVersion": "3.8.4",
        "sbtVersion": "bazel",
    },
)

# BuildInfo lives in its own tiny library so a version/commit change (which
# rewrites BuildInfo.scala on every push) recompiles only this one file. Its
# interface jar exposes just getter signatures — the stamped string values are
# method bodies, stripped from the ijar — so :ingest cache-hits across pushes.
# Were :buildinfo_gen inlined into :ingest's srcs, the whole module would recompile.
scala_library(
    name = "buildinfo",
    srcs = [":buildinfo_gen"],
    visibility = ["//visibility:public"],
)

# Direct third-party deps only (dependency_mode=transitive on
# //bazel/toolchains:dsp_scala_toolchain resolves the rest) — the set is
# build.sbt's `db ++ tapir ++ metrics ++ zioSeq ++ zioSttpClient ++
# openTelemetryWithSentry ++ Seq(...)` for the ingest project.
scala_library(
    name = "ingest",
    srcs = glob(["src/main/scala/**/*.scala"]),
    # db/migration/*.sql must land at the classpath key Flyway expects (db/migration/...).
    resource_strip_prefix = "modules/ingest/src/main/resources",
    resources = glob(["src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        ":buildinfo",
        "//modules/bagit",
        "//modules/jwt",
        "@maven//:com_github_tototoshi_scala_csv_3",
        "@maven//:com_softwaremill_sttp_client4_opentelemetry_tracing_zio_backend_3",
        "@maven//:com_softwaremill_sttp_client4_zio_3",
        "@maven//:com_softwaremill_sttp_client4_zio_json_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_json_zio_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_opentelemetry_tracing_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_refined_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_swagger_ui_bundle_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_http_server_3",
        "@maven//:com_softwaremill_sttp_tapir_tapir_zio_metrics_3",
        "@maven//:com_zaxxer_HikariCP",
        "@maven//:commons_io_commons_io",
        "@maven//:dev_zio_zio_3",
        "@maven//:dev_zio_zio_config_3",
        "@maven//:dev_zio_zio_config_magnolia_3",
        "@maven//:dev_zio_zio_config_typesafe_3",
        "@maven//:dev_zio_zio_json_3",
        "@maven//:dev_zio_zio_json_interop_refined_3",
        "@maven//:dev_zio_zio_logging_3",
        "@maven//:dev_zio_zio_logging_slf4j2_bridge_3",
        "@maven//:dev_zio_zio_metrics_connectors_3",
        "@maven//:dev_zio_zio_metrics_connectors_prometheus_3",
        "@maven//:dev_zio_zio_nio_3",
        "@maven//:dev_zio_zio_opentelemetry_3",
        "@maven//:dev_zio_zio_prelude_3",
        "@maven//:dev_zio_zio_schema_3",
        "@maven//:dev_zio_zio_schema_derivation_3",
        "@maven//:dev_zio_zio_streams_3",
        "@maven//:eu_timepit_refined_3",
        "@maven//:io_opentelemetry_opentelemetry_exporter_logging_otlp",
        "@maven//:io_opentelemetry_opentelemetry_exporter_otlp",
        "@maven//:io_opentelemetry_opentelemetry_sdk",
        "@maven//:io_opentelemetry_semconv_opentelemetry_semconv",
        "@maven//:org_flywaydb_flyway_core",
        "@maven//:org_xerial_sqlite_jdbc",
    ],
)

scala_binary(
    name = "app",
    main_class = "swiss.dasch.Main",
    visibility = ["//visibility:public"],
    runtime_deps = [":ingest"],
)

scala_junit_test(
    name = "test",
    srcs = glob(["src/test/scala/**/*.scala"]),
    resource_strip_prefix = "modules/ingest/src/test/resources",
    resources = glob(["src/test/resources/**"]),
    suffixes = [
        "Spec",
        "IT",
        "Test",
    ],
    deps = [
        ":ingest",
        "//modules/test-runner",
        "@maven//:dev_zio_zio_3",
        "@maven//:dev_zio_zio_test_3",
    ],
)

# --- dsp-ingest image --------------------------------------------------------
# Same lib-dir rationale as //modules/webapi (see its BUILD.bazel comment):
# preserves per-jar META-INF/services + reference.conf instead of a fat jar's
# last-wins merge.
runtime_jars(
    name = "ingest_runtime_jars",
    deps = [":ingest"],
)

pkg_files(
    name = "ingest_lib_files",
    srcs = [":ingest_runtime_jars"],
    prefix = "/sipi/lib",
    strip_prefix = strip_prefix.files_only(),
)

pkg_tar(
    name = "ingest_lib_layer",
    srcs = [":ingest_lib_files"],
)

# OTel java agent + Grafana Pyroscope extension.
pkg_tar(
    name = "otel_layer",
    srcs = [
        "@otel_javaagent//file",
        "@pyroscope_otel//file",
    ],
    package_dir = "/usr/local/lib",
)

# org.opencontainers.image.* labels stamped from git, matching webapi's image —
# consistent provenance matters for incident response (knowing which commit a
# running container corresponds to).
oci_stamped_labels(
    name = "image_labels",
    labels = {
        "maintainer": "support@dasch.swiss",
        "org.opencontainers.image.source": "github.com/dasch-swiss/dsp-api",
    },
    stamp_labels = {
        "org.opencontainers.image.revision": "STABLE_GIT_COMMIT",
        "org.opencontainers.image.version": "STABLE_GIT_VERSION",
    },
)

# No `user` (root): Sipi reads NFS-mounted assets owned by orchestrator-controlled
# uids. HEALTHCHECK isn't emitted (rules_oci can't); it's a docker-compose concern,
# reusing the extracted `/sbin/sipi health --port 3340` binary. Do NOT bake
# JAVA_TOOL_OPTIONS -- compose/ops-deploy set it at runtime.
oci_image(
    name = "image_amd64",
    base = "@temurin_base_amd64",
    entrypoint = ["java", "-cp", "/sipi/lib/*", "swiss.dasch.Main"],
    env = OTEL_DISABLE_ENV,
    exposed_ports = ["3340"],
    labels = ":image_labels",
    tars = [
        "//modules/sipi:runtime_fs_amd64",  # /sbin/sipi, /sipi/**, /usr/bin/{tini,ffmpeg,ffprobe}
        ":otel_layer",
        ":ingest_lib_layer",
    ],
)

oci_image(
    name = "image_arm64",
    base = "@temurin_base_arm64",
    entrypoint = ["java", "-cp", "/sipi/lib/*", "swiss.dasch.Main"],
    env = OTEL_DISABLE_ENV,
    exposed_ports = ["3340"],
    labels = ":image_labels",
    tars = [
        "//modules/sipi:runtime_fs_arm64",
        ":otel_layer",
        ":ingest_lib_layer",
    ],
)

oci_image_index(
    name = "index",
    images = [
        ":image_amd64",
        ":image_arm64",
    ],
)

alias(
    name = "image",
    actual = select({
        "@platforms//cpu:arm64": ":image_arm64",
        "@platforms//cpu:x86_64": ":image_amd64",
    }),
)

# `bazel run //modules/ingest:load` — load the host-arch image into the local
# Docker daemon as :latest (what docker-compose references).
oci_load(
    name = "load",
    image = ":image",
    repo_tags = ["daschswiss/dsp-ingest:latest"],
)

# `bazel run //modules/ingest:push -- -t latest -t <version>` — push the
# multi-arch index.
oci_push(
    name = "push",
    image = ":index",
    repository = "index.docker.io/daschswiss/dsp-ingest",
)
